Implementada classe CozinhaIdInput para facilitar o mapeamento com ModelMapper.
Implementada classe abstrata AbstractMapper, que fica responsável por fazer os mapeamentos de/para response, input e entity. Caso seja necessária alguma configuração específica no futuro basta sobrescrever o método necessário na classe filha.

Todas as classes mapper passam a herdar de AbstractMapper.